--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.17.0
   glowy_borders: ^1.0.2
+  hugeicons: ^0.0.7
 
 dev_dependencies:
   flutter_test:
