--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   glowy_borders: ^1.0.2
   hugeicons: ^0.0.7
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,8 @@ flutter:
   uses-material-design: true
   assets:
   - lib/assets/google-icon.jpg
+  - assets/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
