--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ flutter:
   - lib/assets/google-icon.jpg
   - assets/
   - lib/assets/fire-icon.png
+  - lib/assets/logo.png
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
