--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  flutter_markdown: ^0.6.10
+  google_fonts: ^4.0.3
+  url_launcher: ^6.1.7
+  highlight: ^0.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
