--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,8 @@ jobs:
       # 2. Cài đặt Java (cho build Android)
       - uses: actions/setup-java@v3
         with:
-          java-version: '17.x'
+          distribution: 'temurin'
+          java-version: '17.x',
 
       # 3. Thiết lập Flutter
       - uses: subosito/flutter-action@v2
