--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,10 @@ jobs:
       - uses: actions/checkout@v3
 
       # 2. Cài đặt Java (cho build Android)
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17.x',
+          java-version: '17.x'
 
       # 3. Thiết lập Flutter
       - uses: subosito/flutter-action@v2
