--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
       # 3. Thiết lập Flutter
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          channel: stable
+          flutter-version-file: pubspec.yaml
 
       # 4. Cấu hình Flutter và kiểm tra môi trường
       - run: flutter config --no-analytics
