--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/apk/debug/*"
-          tag: v1.0.${{ github.run_number }}
+          tag: v1.0.${{ github.run_number }}-debug
           token: ${{ secrets.TOKEN_CICD }}
 
       # 9. Push APK Release và AAB lên GitHub Releases
@@ -58,7 +58,7 @@ jobs:
           artifacts: |
             build/app/outputs/apk/release/*.apk
             build/app/outputs/bundle/release/*.aab
-          tag: v1.0.${{ github.run_number }}
+          tag: v1.0.${{ github.run_number }}-release
           token: ${{ secrets.TOKEN_CICD }}
 
       # 10. Deploy APK lên Firebase App Distribution
