--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,9 @@ jobs:
 
       # 10. Deploy APK lên Firebase App Distribution
       - name: Deploy APK to Firebase
-        run: firebase appdistribution:distribute build/app/outputs/apk/debug/app-debug.apk \
-          --app 1:691269644012:android:c8f3e59f32e228fadcbfc9
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        uses: wzieba/Firebase-Distribution-Github-Action@v1
+        with:
+          appId: ${{ secrets.APP_ID }}
+          serviceCredentialsFileContent: ${{ secrets.FIREBASE_TOKEN }}
+          file: build/app/outputs/apk/release/*.apk
+
