--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       # 7. Build APK debug và AAB
       - run: flutter build apk --debug --split-per-abi
       - run: flutter build appbundle --release
-      - run: flutter build apk --release
+      - run: flutter build apk
 
       # 8. Push APK Debug lên GitHub Releases
       - name: Push to Debug Releases
@@ -63,9 +63,15 @@ jobs:
           token: ${{ secrets.TOKEN_CICD }}
 
       # 10. Deploy APK lên Firebase App Distribution
+      - uses: actions/upload-artifact@v1
+        with:
+          name: release-apk
+          path: build/app/outputs/apk/release/app-release.apk
+
       - name: Deploy APK to Firebase
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{ secrets.APP_ID }}
           serviceCredentialsFileContent: ${{ secrets.FIREBASE_TOKEN }}
-          file: build\app\outputs\flutter-apk\app-release.apk
+          group: testers
+          file: build/app/outputs/apk/release/app-release.apk
